--- a/悦游/YueYou.UI/Views/Shared/_Layout.cshtml
+++ b/悦游/YueYou.UI/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
                                                                     </div>
                                                                 </li>
                                                             </ul>
-                                                            <p class="good-tips marginB10"><a id="btnForgetpsw" class="fr">忘记密码？</a>还没有账号？<a href="@Url.Action("Register", "User")" target="_blank" id="btnRegister">立即注册</a></p>
+                                                            <p class="good-tips marginB10"><a id="btnForgetpsw" class="fr">忘记密码？</a>还没有账号？<a href="@Url.Action("Register", "UserInfo")" target="_blank" id="btnRegister">立即注册</a></p>
                                                             <div class="login-box marginB10">
                                                                 <input id="login_btn" type="submit" class="btn btn-micv5 btn-block globalLogin"  value="登录" />
                                                             </div>                                                       
@@ -113,7 +113,6 @@
          </div>
        </div>
    </div>
-    <br />
     @RenderBody()
     <br />
     <div class="line"></div>
