--- a/悦游/YueYou.UI/Views/GuideDetails/GuideDetails.cshtml
+++ b/悦游/YueYou.UI/Views/GuideDetails/GuideDetails.cshtml
@@ -87,39 +87,59 @@
             </div>
             @*服务评论*@
             <div id="coment"  class="commentAll">
-                <!--评论区域 begin-->
-                <div class="reviewArea clearfix">               
-                    <textarea class="content comment-input" placeholder="说些什么话吧" onkeyup="keyUP(this)"></textarea>
-                    <a href="javascript:;" class="plBtn">评论</a>
-                </div>
-                <!--评论区域 end-->
-                <!--回复区域 begin-->
-                <div class="comment-show">
-                    <div class="comment-show-con clearfix">
-                        <div class="comment-show-con-img pull-left"><img src="images/header-img-comment_03.png" alt=""></div>
-                        <div class="comment-show-con-list pull-left clearfix">
-                            <div class="pl-text clearfix">
-                                <a href="#" class="comment-size-name">张三 : </a>
-                                <span class="my-pl-con">&nbsp;来啊 造作啊!</span>
-                            </div>
-                            <div class="date-dz">
-                                <span class="date-dz-left pull-left comment-time">2017-5-2 11:11:39</span>
-                                <div class="date-dz-right pull-right comment-pl-block">
-                                    <a href="javascript:;" class="removeBlock">删除</a>
-                                    <a href="javascript:;" class="date-dz-pl pl-hf hf-con-block pull-left">回复</a>
-                                    <span class="pull-left date-dz-line">|</span>
-                                    <a href="javascript:;" class="date-dz-z pull-left"><i class="date-dz-z-click-red"></i>赞 (<i class="z-num">666</i>)</a>
-                                </div>
-                            </div>
-                            <div class="hf-list-con"></div>
-                        </div>
-                    </div>
-                </div>
-                <!--回复区域 end-->
+                @{ Html.RenderPartial("GuideComment",Model.comment); }              
             </div>
             @*费用说明*@
-            <div id="price" style="height: 500px;background-color: red;">
-
+            <div id="price" >
+                <div class="clearfix">
+                    <div class="left">
+                        <h6 class="font-size2">服务费用 </h6>
+                    </div>
+                    <div class="right">
+                        <p style="color:darkgreen; font-weight:bold;">向导服务</p>
+                        <dic class="row">
+                            <div class="col-sm-6">
+                                <p>
+                                    <span>徒步：</span>
+                                    <span>CNY&nbsp;&nbsp;<strong>1100/天</strong></span>
+                                </p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p>
+                                    <span>五座车：</span>
+                                    <span>CNY&nbsp;&nbsp;<strong>1200/天</strong></span>
+                                </p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p>
+                                    <span>七座车：</span>
+                                    <span>CNY&nbsp;&nbsp;<strong>1500/天</strong></span>
+                                </p>
+                            </div>
+                        </dic>
+                        <p style="color:darkgreen; font-weight:bold;">接送机服务</p>
+                        <dic class="row">
+                            <div class="col-sm-6">
+                                <p>
+                                    <span>徒步：</span>
+                                    <span>CNY&nbsp;&nbsp;<strong>600/次</strong></span>
+                                </p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p>
+                                    <span>五座车：</span>
+                                    <span>CNY&nbsp;&nbsp;<strong>900/次</strong></span>
+                                </p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p>
+                                    <span>七座车：</span>
+                                    <span>CNY&nbsp;&nbsp;<strong>1100/次</strong></span>
+                                </p>
+                            </div>
+                        </dic>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
