--- a/悦游/YueYou.UI/Views/Shared/_Layout.cshtml
+++ b/悦游/YueYou.UI/Views/Shared/_Layout.cshtml
@@ -47,12 +47,12 @@
                     {
                         if (Session["User_image"] != null)
                         {
-                            <a class="a globalLoginBtn" href="@Url.Action("Index", "UserInfo",new { User_id=Session["User_id"]})"><span><img style="border-radius:20px" src="@Session["User_image"]" /></span></a>
+                            <a class="a globalLoginBtn" href="@Url.Action("Index", "UserInfo",new { User_id=Session["User_id"]})"><span><img style="border-radius:20px;width:40px;height:40px;" src="@Session["User_image"]" /></span></a>
                             <a class="zhuxiaobox" style="display: none;" href="@Url.Action("LoginOut", "UserInfo")"><span class="glyphicon glyphicon-user zhuxiao">&#xe610;</span></a>
                         }
                         else
                         {
-                            <a class="a globalLoginBtn" href="@Url.Action("Index", "UserInfo",new { User_id=Session["User_id"]})"><span><img style="border-radius:20px" src="~/images/Userphoto/U2.jpg" /></span></a>
+                            <a class="a globalLoginBtn" href="@Url.Action("Index", "UserInfo",new { User_id=Session["User_id"]})"><span><img style="border-radius:20px;width:40px;height:40px;" src="~/images/Userphoto/U2.jpg" /></span></a>
                             <a class="zhuxiaobox" style="display: none;" href="@Url.Action("LoginOut", "UserInfo")"><span class="glyphicon glyphicon-user zhuxiao">&#xe610;</span></a>
                         }
                     }
